--- a/README.yaml
+++ b/README.yaml
@@ -1,4 +1,3 @@
 title: "WordCrypt"
-contributor: hyunmoon
-contributors: kpeng16
+contributor: hyunmoon, kpeng16
 url: https://github.com/hyunmoon/wordcrypt
