--- a/README.yaml
+++ b/README.yaml
@@ -1,3 +1,3 @@
 title: "WordCrypt"
-contributor: [hyunmoon, kpeng16]
+contributors: [ hyunmoon, kpeng16 ]
 url: https://github.com/hyunmoon/wordcrypt
